--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Install ESLint for Next linting
+        run: npm install --no-save eslint@8.57.0
+
       - name: Lint
         run: npm run lint
 
